read & write csv

--- a/RIDE-3557-CSV.ipynb
+++ b/RIDE-3557-CSV.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "f8283358-86af-4277-a86e-d6d12cdb13f6",
    "metadata": {},
    "outputs": [],
@@ -19,13 +19,16 @@
     "sparkConf.setAppName(\"KUBERNETES-IS-AWESOME\")\n",
     "sparkConf.set(\"spark.kubernetes.container.image\", \"apache/spark-py:v3.3.1\")\n",
     "sparkConf.set(\"spark.kubernetes.namespace\", \"spark\")\n",
-    "sparkConf.set(\"spark.kubernetes.authenticate.driver.serviceAccountName\", \"spark\")\n",
+    "sparkConf.set(\"spark.kubernetes.authenticate.driver.serviceAccountName\", \"jupyterhub-spark\")\n",
     "sparkConf.set(\"spark.driver.host\", os.environ.get('POD_IP'))\n",
     "\n",
     "sparkConf.set(\"spark.kubernetes.executor.volumes.hostPath.work.mount.path\", \"/home/jovyan/work\")\n",
+    "sparkConf.set(\"spark.kubernetes.executor.volumes.hostPath.work.mount.readOnly\", \"false\")\n",
     "sparkConf.set(\"spark.kubernetes.executor.volumes.hostPath.work.options.path\", \"/home/tobias/ecc\")\n",
     "\n",
-    "sparkConf.set(\"spark.executor.memory\", \"8g\")\n",
+    "#sparkConf.set(\"spark.kubernetes.executor.podTemplateFile\", \"pod-template.yaml\")\n",
+    "\n",
+    "sparkConf.set(\"spark.executor.memory\", \"4g\")\n",
     "\n",
     "spark = SparkSession.builder.config(conf=sparkConf).getOrCreate()\n",
     "sc = spark.sparkContext\n"
@@ -33,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "2bbbe7c3-126d-4dfa-bc5a-3ba8c4a1bd5b",
    "metadata": {},
    "outputs": [
@@ -87,7 +90,7 @@
     "\n",
     "#positions = spark.read.options(header='True', inferSchema='True').csv(\"../spark-examples/positions.csv\")\n",
     "#positions = spark.read.options(header='True', inferSchema='True', index_col='RecordNumber').schema(schema).csv(\"../spark-examples/positions.csv\")\n",
-    "spark_df_positions = spark.read.options(header='True').schema(schema_positions).csv(\"../spark-examples/positions.csv\")\n",
+    "spark_df_positions = spark.read.options(header='True').schema(schema_positions).csv(\"positions.csv\")\n",
     "spark_df_positions = spark_df_positions.drop('RecordNumber')\n",
     "\n",
     "spark_df_positions.printSchema()\n",
@@ -96,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "968b980e-de61-4771-9da5-862d48c7f792",
    "metadata": {},
    "outputs": [
@@ -145,7 +148,7 @@
     "\n",
     "#positions = spark.read.options(header='True', inferSchema='True').csv(\"../spark-examples/positions.csv\")\n",
     "#positions = spark.read.options(header='True', inferSchema='True', index_col='RecordNumber').schema(schema).csv(\"../spark-examples/positions.csv\")\n",
-    "spark_df_scenarios = spark.read.options(header='True').schema(schema_scenarios).csv(\"../spark-examples/scenarios.csv\")\n",
+    "spark_df_scenarios = spark.read.options(header='True').schema(schema_scenarios).csv(\"scenarios.csv\")\n",
     "spark_df_scenarios = spark_df_scenarios.drop('index')\n",
     "\n",
     "spark_df_scenarios.printSchema()\n",
@@ -154,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "id": "a5532fed",
    "metadata": {},
    "outputs": [
@@ -162,33 +165,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "joining...\n",
-      "+---------+-----------+-------------------+\n",
-      "|member_id|scenario_id|sum(pnl_value)     |\n",
-      "+---------+-----------+-------------------+\n",
-      "|0        |190        |-69.18207792913546 |\n",
-      "|0        |632        |-69.16282119662804 |\n",
-      "|0        |716        |-68.77338113182522 |\n",
-      "|0        |915        |-61.98909991900546 |\n",
-      "|0        |1218       |-64.85855314918105 |\n",
-      "|0        |1237       |-67.53840526210047 |\n",
-      "|0        |1265       |-64.3799491168693  |\n",
-      "|0        |1327       |-64.38461719562324 |\n",
-      "|0        |1478       |-67.14209073367797 |\n",
-      "|0        |1578       |-62.911256205017196|\n",
-      "|0        |1761       |-67.6904852378482  |\n",
-      "|0        |1790       |-69.53589329345252 |\n",
-      "|0        |1866       |-69.5958417819003  |\n",
-      "|0        |2248       |-67.79524489233343 |\n",
-      "|0        |2395       |-66.6113374681786  |\n",
-      "|0        |2593       |-66.05047862806636 |\n",
-      "|0        |3137       |-69.14397152083643 |\n",
-      "|0        |3164       |-65.76604760952448 |\n",
-      "|0        |3645       |-66.62506936813895 |\n",
-      "|0        |3700       |-65.28099673088725 |\n",
-      "+---------+-----------+-------------------+\n",
-      "only showing top 20 rows\n",
-      "\n"
+      "joining...\n"
      ]
     }
    ],
@@ -206,13 +183,30 @@
     "print(\"joining...\")\n",
     "joined = spark_df_positions.crossJoin(spark_df_scenarios)\n",
     "#result = joined.withColumn('pnl_value', joined.value - joined.shift_value).groupBy(\"member_id\", \"scenario_id\").sum(\"pnl_value\").collect()\n",
-    "joined.withColumn('pnl_value', joined.value - joined.shift_value).groupBy(\"member_id\", \"scenario_id\").sum(\"pnl_value\").show(truncate=False)\n",
+    "#joined.withColumn('pnl_value', joined.value - joined.shift_value).groupBy(\"member_id\", \"scenario_id\").sum(\"pnl_value\").show(truncate=False)\n",
+    "result = joined.withColumn('pnl_value', joined.value - joined.shift_value).groupBy(\"member_id\", \"scenario_id\").sum(\"pnl_value\")\n",
+    "#result.collect()\n",
+    "pandas_result = result.toPandas()\n",
+    "pandas_result.to_csv(\"result.csv\")\n",
+    "\n",
+    "#result.repartition(1).write.csv(\"\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
+   "id": "007d3315-c762-4614-959c-15ebdc0b70d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# filesystem permissions: user & groupid mismatch between images.\n",
+    "#result.coalesce(1).write.csv(\"result_spark.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "463fe566-3fa9-432e-a31a-6834ed6c6360",
    "metadata": {},
    "outputs": [],
